# SUMS-Semantic-Urban-Mesh-Segmentation-public

./: .gitignore  CMakeLists.txt  README.md
competing_methods/my_KPConv/: test_models.py  train_Hessigsim3D.py  train_UrbanMesh.py
competing_methods/my_KPConv/datasets/: Hessigsim3D.py  UrbanMesh.py
competing_methods/my_KPConv/kernels/dispositions/: k_015_center_3D.ply
competing_methods/my_KPConv/utils/: config.py  metrics.py  ply.py  tester.py  trainer.py
competing_methods/my_RandLANet/: .gitignore  RandLANet.py  helper_tool.py  main_UrbanMesh.py  set_up_GPU_on_Windows_with_CUDA11_and_TF1.15.txt  tester_UrbanMesh.py
competing_methods/my_RandLANet/utils/: data_prepare_urbanmesh.py
competing_methods/my_RandLANet/utils/cpp_wrappers/cpp_subsampling/: CMakeLists.txt  grid_subsampling.cp36-win_amd64.pyd  grid_subsampling.cp37-win_amd64.pyd
competing_methods/my_RandLANet/utils/nearest_neighbors/: knn.cpp  knn.pyx  knn_.cxx  knn_.h
competing_methods/my_RandLANet/utils/nearest_neighbors/lib/python/: nearest_neighbors.cp36-win_amd64.pyd  nearest_neighbors.cp37-win_amd64.pyd
competing_methods/my_pointnet_and_pointnet++/my_torch_point3d/: requirements.txt  self_build.txt
competing_methods/my_pointnet_and_pointnet++/my_torch_point3d/conf/: config.yaml  eval.yaml
competing_methods/my_pointnet_and_pointnet++/my_torch_point3d/conf/data/segmentation/: urbanmeshused.yaml
competing_methods/my_pointnet_and_pointnet++/my_torch_point3d/conf/models/segmentation/: randlanet.yaml
competing_methods/my_pointnet_and_pointnet++/my_torch_point3d/conf/training/: default.yaml  kpconv.yaml
competing_methods/my_pointnet_and_pointnet++/my_torch_point3d/conf/training/s3dis_benchmark/: pointnet2.yaml  rsconv.yaml
competing_methods/my_pointnet_and_pointnet++/my_torch_point3d/conf/visualization/: default.yaml
competing_methods/my_pointnet_and_pointnet++/my_torch_point3d/torch_points3d/: trainer.py
competing_methods/my_pointnet_and_pointnet++/my_torch_point3d/torch_points3d/datasets/segmentation/: urbanmesh.py
competing_methods/my_pointnet_and_pointnet++/my_torch_point3d/torch_points3d/metrics/: model_checkpoint.py
competing_methods/my_pointnet_and_pointnet++/my_torch_point3d/torch_points3d/models/base_architectures/: unet.py
competing_methods/my_pointnet_and_pointnet++/my_torch_point3d/torch_points3d/models/segmentation/: pointnet.py
competing_methods/my_pointnet_and_pointnet++/my_torch_point3d/torch_points3d/visualization/: visualizer.py
competing_methods/my_superpoint_graph/superpoint_graph/learning/: custom_dataset.py  evaluate.py  graphnet.py  main.py  metrics.py  modules.py  pointnet.py  s3dis_dataset.py  sema3d_dataset.py  spg.py
competing_methods/my_superpoint_graph/superpoint_graph/learning/ecc/: GraphConvInfo.py  GraphConvModule.py  GraphPoolInfo.py  GraphPoolModule.py  __init__.py  cuda_kernels.py  test_GraphConvModule.py  test_GraphPoolModule.py  utils.py
competing_methods/my_superpoint_graph/superpoint_graph/partition/: libcp.pyd  libply_c.pyd  partition.py  provider.py  visualize.py
competing_methods/my_superpoint_graph/superpoint_graph/partition/cut-pursuit/include/: Common.h
competing_methods/my_superpoint_graph/superpoint_graph/partition/cut-pursuit/src/: CMakeLists.txt  cutpursuit.cpp
competing_methods/my_superpoint_graph/superpoint_graph/partition/ply_c/: CMakeLists.txt  ply_c.cpp
competing_methods/my_superpoint_graph/superpoint_graph/supervized_partition/: libply_c.pyd  libpp.pyd  losses.py  my_folderhierarchy.py  my_graph_processing.py  my_supervized_partition.py  partition.py  provider.py  visualize.py
semantic_urban_mesh_segmentation/: CGAL_Define.hpp  CMakeLists.txt  PTCloud.hpp  SFMesh.hpp  feature_computation.cpp  feature_computation.hpp  main.cpp  math_base.hpp  mesh_classifier.cpp  mesh_classifier.hpp  mesh_io.cpp  mesh_io.hpp  mesh_processor.cpp  mesh_processor.hpp  operation_function.cpp  operation_function.hpp  over_segmentation.cpp  over_segmentation.hpp  parameters.cpp  parameters.hpp  property_parsing.cpp  property_parsing.hpp  random_generator.hpp  sampling_function.cpp  sampling_function.hpp  space_iterators.hpp  spatial_hashing.hpp  super_segment.hpp
